Decrease input font size to prevent MM being cut off

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ input {
   grid-column: span 2;
   border: none;
   text-align: center;
-  font-size: 8rem;
+  font-size: 7rem;
   outline: none;
 }
 
